Reformat class convensions.

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -63,4 +63,9 @@
 @import 'components/site-header';
 @import 'components/menus';
 @import 'components/site-footer';
+@import 'components/pages/bio';
+@import 'components/pages/contact';
+@import 'components/pages/home';
+@import 'components/pages/music';
+@import 'components/pages/shows';
 @import 'custom';
