--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,9 +30,9 @@
           </ul>
         </div> <!-- .menus -->
       </div><!-- .top-section -->
-      <div class="bottom-section">
+      {{!--<div class="bottom-section">
         <h1 class="slogan">{{slogan}}</h1>
-      </div><!-- .bottom-section -->
-    </div><!-- .header-content -->
+      </div> .bottom-section -->
+    </div>-- .header-content --}}
   </div><!-- .container -->
 </header>
