--- a/src/partials/social-buttons.html
+++ b/src/partials/social-buttons.html
@@ -1,4 +1,4 @@
-<ul class="social-buttons menu expanded text-center icon-top padding-top padding-bottom">
+<ul class="social-buttons menu expanded text-center icon-top">
   <li><a href="https://www.facebook.com/BryanCeemusic/"><i class="fa fa-facebook" aria-hidden="true"></i>  <span>Facebook</span></a></li>
   <li><a href="https://www.instagram.com/bryan.cee"><i class="fa fa-instagram" aria-hidden="true"></i>  <span>Instagram</span></a></li>
   <li><a href="https://www.youtube.com/channel/UC3iaoI3i56eZSY6uLD9nahg"><i class="fa fa-youtube-play" aria-hidden="true"></i>  <span>YouTube</span></a></li>
