--- a/src/assets/scss/components/_site-header.scss
+++ b/src/assets/scss/components/_site-header.scss
@@ -1,7 +1,7 @@
 /* Adding the header image */
 
 .site-header {
-  background-color: $primary-color;
+  background-color: $secondary-color;
   // background-size: cover;
   // position: relative;
   // height: 100vh;
